infrastructure/configs/base/networking/traefik/dashboard/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: traefik-dashboard-basicauth
  namespace: networking

spec:
  basicAuth:
    secret: traefik-dashboard-auth
